@@ -14,6 +14,9 @@
         <maven.compiler.release>17</maven.compiler.release>
         <javafx.version>21.0.2</javafx.version>
         <mysql.connector.version>9.7.0</mysql.connector.version>
+        <javafx.platform>win</javafx.platform>
+        <app.mainClass>com.auction.Main</app.mainClass>
+        <app.name>auction-client</app.name>
     </properties>
 
     <dependencies>
@@ -21,11 +24,13 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
+            <classifier>${javafx.platform}</classifier>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
+            <classifier>${javafx.platform}</classifier>
         </dependency>
         <dependency>
             <groupId>com.mysql</groupId>
@@ -50,7 +55,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.auction.Main</mainClass>
+                    <mainClass>${app.mainClass}</mainClass>
+                    <options>
+                        <option>--add-opens=javafx.graphics/javafx.application=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
